log/arch/powerpc/include/uapi/asm/vas-api.h.log
commit 45591da765885f7320a111d290b3a28a23eed359
Author: Stephen Rothwell <sfr@canb.auug.org.au>
Date:   Wed Apr 22 15:41:29 2020 +1000

    powerpc/vas: Include linux/types.h in uapi/asm/vas-api.h
    
    allyesconfig fails with:
      ./usr/include/asm/vas-api.h:15:2: error: unknown type name '__u32'
         15 |  __u32 version;
            |  ^~~~~
      ./usr/include/asm/vas-api.h:16:2: error: unknown type name '__s16'
         16 |  __s16 vas_id; /* specific instance of vas or -1 for default */
            |  ^~~~~
      ./usr/include/asm/vas-api.h:17:2: error: unknown type name '__u16'
         17 |  __u16 reserved1;
            |  ^~~~~
      ./usr/include/asm/vas-api.h:18:2: error: unknown type name '__u64'
         18 |  __u64 flags; /* Future use */
            |  ^~~~~
      ./usr/include/asm/vas-api.h:19:2: error: unknown type name '__u64'
         19 |  __u64 reserved2[6];
            |  ^~~~~
    
    uapi headers should be self contained, so add an include of
    linux/types.h.
    
    Fixes: 45f25a79fe50 ("powerpc/vas: Define VAS_TX_WIN_OPEN ioctl API")
    Signed-off-by: Stephen Rothwell <sfr@canb.auug.org.au>
    Acked-by: Haren Myneni <haren@linux.ibm.com>
    [mpe: Flesh out change log from linux-next error report]
    Signed-off-by: Michael Ellerman <mpe@ellerman.id.au>
    Link: https://lore.kernel.org/r/20200422154129.11f988fd@canb.auug.org.au

diff --git a/arch/powerpc/include/uapi/asm/vas-api.h b/arch/powerpc/include/uapi/asm/vas-api.h
index fe95d67e3bab..ebd4b2424785 100644
--- a/arch/powerpc/include/uapi/asm/vas-api.h
+++ b/arch/powerpc/include/uapi/asm/vas-api.h
@@ -6,6 +6,8 @@
 #ifndef _UAPI_MISC_VAS_H
 #define _UAPI_MISC_VAS_H
 
+#include <linux/types.h>
+
 #include <asm/ioctl.h>
 
 #define VAS_MAGIC	'v'

commit 45f25a79fe50f330b563d012fc856a1103cb00d8
Author: Haren Myneni <haren@linux.ibm.com>
Date:   Fri Apr 17 02:01:05 2020 -0700

    powerpc/vas: Define VAS_TX_WIN_OPEN ioctl API
    
    Define the VAS_TX_WIN_OPEN ioctl interface for NX GZIP access
    from user space. This interface is used to open GZIP send window and
    mmap region which can be used by userspace to send requests to NX
    directly with copy/paste instructions.
    
    Signed-off-by: Haren Myneni <haren@linux.ibm.com>
    Signed-off-by: Michael Ellerman <mpe@ellerman.id.au>
    Link: https://lore.kernel.org/r/1587114065.2275.1106.camel@hbabu-laptop

diff --git a/arch/powerpc/include/uapi/asm/vas-api.h b/arch/powerpc/include/uapi/asm/vas-api.h
new file mode 100644
index 000000000000..fe95d67e3bab
--- /dev/null
+++ b/arch/powerpc/include/uapi/asm/vas-api.h
@@ -0,0 +1,22 @@
+/* SPDX-License-Identifier: GPL-2.0+ WITH Linux-syscall-note */
+/*
+ * Copyright 2019 IBM Corp.
+ */
+
+#ifndef _UAPI_MISC_VAS_H
+#define _UAPI_MISC_VAS_H
+
+#include <asm/ioctl.h>
+
+#define VAS_MAGIC	'v'
+#define VAS_TX_WIN_OPEN	_IOW(VAS_MAGIC, 0x20, struct vas_tx_win_open_attr)
+
+struct vas_tx_win_open_attr {
+	__u32	version;
+	__s16	vas_id;	/* specific instance of vas or -1 for default */
+	__u16	reserved1;
+	__u64	flags;	/* Future use */
+	__u64	reserved2[6];
+};
+
+#endif /* _UAPI_MISC_VAS_H */
